# hmh

./: .clang_old_plugin  .clc_defective  .gitignore  Makefile  README.md  build_local_lib.sh  meson.build
include/: game_platform.h  sdl_game.h
src/: .clang  .clang_complete  Makefile  game.c  game.h  game_platform.h  hmh  main.c  meson.build  oldcode.c  sdl_game.c  sdl_game.h
